# 3ds-brew-remote

./: .gitignore  README.md
3ds/: CMakeLists.txt  README.md
3ds/BUILDS/: 3ds-remote.3dsx  3ds-remote.cia  3ds-remote.elf  3ds-remote.smdh
3ds/include/: log.h
3ds/meta/: cia.rsf
Controller/3ds/include/: platform.h
Controller/3ds/source/: log.cpp  main.cpp  platform.cpp
Controller/pc/: protocol.py  receiver.py  simulator.py  timeline.txt
pc/: main.py  receiver.py
pc/app/input_server/: .dockerignore  CMakeLists.txt  Dockerfile
pc/app/input_server/src/: host_environment.h  logger.h  main.cpp  protocol.cpp  protocol.h  server.cpp  server.h
pc/app/input_server/src/host/: host_environment.cpp  host_environment.h
pc/app/input_server/src/server/: logger.h  server.cpp
pc/app/py_poc/: main.py
pc/app/py_poc/src/: protocol.py
pc/app/py_poc/src/classes/: inputdevice.py
pc/src/: receiver.py  simulator.py
pc/src/classes/: dsinput.py  inputdevice.py
